Improve client type-safety and discrimination of errors
Add safe utility to vanilla client
