# packages/openapi/test/routers/appRouter.openapi.json
@@ -4981,12 +4981,16 @@
           },
           "data": {
             "$ref": "#/components/schemas/DefaultErrorData"
+          },
+          "~": {
+            "$ref": "#/components/schemas/TRPCFormattedErrorMeta"
           }
         },
         "required": [
           "message",
           "code",
-          "data"
+          "data",
+          "~"
         ],
         "additionalProperties": false
       },
@@ -5034,6 +5038,20 @@
         "required": [
           "code",
           "httpStatus"
+        ],
+        "additionalProperties": false
+      },
+      "TRPCFormattedErrorMeta": {
+        "type": "object",
+        "properties": {
+          "kind": {
+            "type": "string",
+            "const": "formatted"
+          },
+          "declaredErrorKey": {}
+        },
+        "required": [
+          "kind"
         ],
         "additionalProperties": false
       }
