# packages/server/src/unstable-core-do-not-import/rpc/index.ts
@@ -10,8 +10,11 @@ export type {
   TRPCClientIncomingRequest,
   TRPCClientOutgoingMessage,
   TRPCClientOutgoingRequest,
+  TRPCDeclaredErrorMeta,
   TRPCErrorResponse,
+  TRPCErrorShapeMeta,
   TRPCErrorShape,
+  TRPCFormattedErrorMeta,
   TRPCReconnectNotification,
   TRPCRequest,
   TRPCRequestMessage,
